# star-upcDst

./: .gitignore  CMakeCache.txt  CMakeLists.txt  G__star-upc.cxx  Makefile  README.md  build-maker.sh  cmake_install.cmake
work/: .nfs00000000c0f8fe6a000418e5  AnalysisManager  AnalysisOutput.root  BEMCParameters.txt  CMakeCache.txt  CMakeLists.txt  CalculateLuminosity.py  CompareLists.py  FinalPlots.root  Makefile  MergeFiles.C  PrintStat.py  PrintStat_Alma.py  README.md  RerunGoodRunJobs.py  RunBemcStudy.py  RunInfo.txt  RunMerge.py  SaveResults.C  SubmitPlugin.py  SubmitPlugin_Alma.py  bichselG10.C  cmake_install.cmake  finalize.C  finalize.py  hepdb.dbs  init.sh  plotManager.C  plotManager_C.d  plotManager_C_ACLiC_dict_rdict.pcm  remove.sh  rootinit.sh  runPlot.C  runPlotManager.py  scheduler_template.xml  submit.xml  submitOut.out
work/Macra/: CreateOffsetList.py  pp2ppOffsets_v2017.0.2.txt
work/config/: AnaBP_10.5.24.h  AnaBP_12.5.24.h  AnaChiC_13.10.25.h  AnaGoodRun_1.5.25.h  AnaGoodRun_2.5.25.h  AnaGoodRun_22.7.25.h  AnaGoodRun_6.5.25.h  AnaGoodRun_8.4.25.h  AnaGoodRun_BEMCHits_21.8.25.h  AnaGoodRun_test_21.7.25.h  AnaJPSI_12.7.25.h  AnaJPSI_14.4.25.h  AnaJPSI_noRP_3.5.25.h  AnaJPsi_14.4.25.h  AnaJPsi_15.4.25.h  AnaJPsi_21.1.25.h  AnaJPsi_24.1.25.h  AnaJPsi_25.1.25.h  AnaJPsi_30.1.25.h  AnaJPsi_7.3.25.h  AnaJPsi_experiment_21.1.25.h  AnaJPsi_noRP_21.7.25.h  AnaJPsi_noRP_27.8.25.h  AnaJPsi_noRP_29.4.25.h  AnaJPsi_noRP_3.5.25.h  AnaJPsi_noRP_5.8.25.h  AnaJPsi_noRP_9.5.25.h  AnaJPsi_noRP_diffPID_10.10.25.h  AnaJPsi_noRP_noB2B_21.9.25.h  AnaJPsi_withRP_21.7.25.h  AnaJPsi_withRP_3.5.25.h  AnaJPsi_withRP_5.8.25.h  AnaV01.h  AnaV01_10.h  AnaV01_7.5.24.h  AnaV01_tighterCuts.h  AnaV02.h  AnaV02_10.5.24.h  AnaV02_23.4.24.h  AnaV02_5.5.24.h  (+85 more)
work/src/: Ana.cxx  (+32 more)
(+839 files in other folders)
